# python_module_based_constrain_solver

./: .gitignore  README.md
documentation/: README.md
notes/vflib/: README.md
src/vflib/: CMakeLists.txt  LICENSE  README.md
src/vflib/include/: error.hpp  vf3.hpp
src/vflib/src/: main.cpp  vf3.cpp
